create post + like and dislike

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.data.mongodb.port=27017
 
 #setting for server port
 server.port=8080
+
+
+
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
